fix: scrollbar styles

--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -32,6 +32,10 @@
       scrollbar-width: thin;
       scrollbar-color: transparent transparent;
     }
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
 
